test/success/nostd/basics/lambda/main.sk
module Main {

fn main() {
    let f = || ();
    f();
}

}