test/errors/safety/missing_safe_unsafe_call/main.sk
module Main {

fn foo() = extern

@unsafe
fn wrapper() {
    foo();
}

fn main() {
    wrapper();
}

}